# wrangle

./: .gitignore  .travis.yml  README.md  df_corr_extratrees.py  pyproject.toml  requirements.txt  setup.py  test_script.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci-deploy.yml  ci-push.yml  greetings.yml
docs/: autogen.py  structure.py
wrangle/: __init__.py  all_same_values.py  array_random_shuffle.py  array_random_weighted.py  array_split.py  array_to_multilabel.py  category_labeling.py  clean_colnames.py  col_drop_outliers.py  col_has_allsame.py  col_resample_equal.py  col_resample_interval.py  col_to_multilabel.py  convert_to_numeric.py  corr.py  correlations.py  create_synth_data.py  create_synth_model.py  datetime_generator.py  df_corr_any.py  df_corr_pearson.py  df_corr_randomforest.py  df_drop_col.py  df_drop_weak.py  df_find_nan.py  df_rescale_sqrt.py  df_to_binary.py  df_to_groupby.py  df_to_multiclass.py  df_to_multilabel.py  df_to_numeric.py  groupby.py  groupby_func.py  keep_strong.py  network_check.py  ols_corr.py  onehot_encoding.py  outliers.py  resample.py  rescale.py  (+8 more)
wrangle/array/: __init__.py  array_detect_task.py  array_random_shuffle.py  array_random_weighted.py  array_reshape_conv1d.py  array_reshape_lstm.py  array_split.py  array_to_generator.py  array_to_kfold.py  array_to_multilabel.py
wrangle/col/: __init__.py  col_check_allsame.py  col_corr_category.py  col_corr_ols.py  (+16 more)
wrangler/: __init__.py  column_handler.py  label_to_cols.py  wrangler_utils.py
(+59 files in other folders)
